# Order is the first law of heaven

add_subdirectory (DebugManager)

add_subdirectory (DataManager)
add_subdirectory (SoundsManager)
add_subdirectory (PhysicsEngine)

add_subdirectory (GameObjects)
add_subdirectory (Mind)
add_subdirectory (UserInterface)
add_subdirectory (Graphics)

add_subdirectory (Tools)
add_subdirectory (General)
